Fixing unecessary scrollbar on main xpla view

--- a/x-platform/public/less/layout.less
+++ b/x-platform/public/less/layout.less
@@ -5,7 +5,7 @@
 }
 
 .content-height {
-    height: calc(~'100% - 51px');
+    height: calc(~'100% - 52px');
     &.header-hidden {
       height: 100%;
     }
